# app/lib/api/schema.ts
@@ -783,6 +783,7 @@ export interface components {
     MessageType: {
       code: string
       name: string
+      is_say_type: boolean
     }
     MessageView: {
       from?: components['schemas']['VillageParticipantView']
@@ -812,10 +813,10 @@ export interface components {
       viewable_skill_message_type_list: components['schemas']['MessageType'][]
       count_camp?: components['schemas']['Camp']
       description: string
-      abilities: components['schemas']['AbilityTypes']
-      is_fox_count: boolean
       is_viewable_werewolf_say: boolean
       is_available_werewolf_say: boolean
+      abilities: components['schemas']['AbilityTypes']
+      is_fox_count: boolean
     }
     SkillRequest: {
       first: components['schemas']['Skill']
@@ -992,11 +993,11 @@ export interface components {
       code: string
       name: string
       is_canceled: boolean
-      is_progress: boolean
+      is_finished: boolean
       is_prologue: boolean
       is_epilogue: boolean
       is_solved: boolean
-      is_finished: boolean
+      is_progress: boolean
     }
     VillageTimeView: {
       term_type: string
@@ -1121,6 +1122,10 @@ export interface components {
     VillageAnchorMessageView: {
       message?: components['schemas']['MessageView']
     }
+    VillageLatestForm: {
+      /** Format: int64 */
+      from?: number
+    }
     VillageLatestView: {
       /** Format: int64 */
       unix_time_milli: number
@@ -1130,6 +1135,7 @@ export interface components {
     VillageMessageForm: {
       message_type_list?: string[]
       participant_id_list?: number[]
+      to_participant_id_list?: number[]
       /** Format: int64 */
       from?: number
       keyword?: string
@@ -1200,22 +1206,25 @@ export interface components {
       coming_outs: components['schemas']['ComingOuts']
       access_infos: components['schemas']['AccessInfo'][]
       is_alive: boolean
-      is_dead: boolean
-      is_admin: boolean
       is_available_coming_out: boolean
-      is_viewable_fox_message: boolean
-      is_viewable_mason_message: boolean
       is_viewable_grave_say: boolean
       is_sayable_grave_say: boolean
+      is_viewable_monologue_say: boolean
       is_sayable_monologue_say: boolean
       is_viewable_secret_say: boolean
-      is_viewable_spectate_say: boolean
-      is_sayable_spectate_say: boolean
+      is_sayable_secret_say: boolean
       is_viewable_werewolf_say: boolean
       is_sayable_werewolf_say: boolean
+      is_viewable_fox_message: boolean
+      is_viewable_mason_message: boolean
       is_available_vote: boolean
+      is_viewable_spectate_say: boolean
+      is_sayable_spectate_say: boolean
+      is_dead: boolean
+      is_admin: boolean
       is_viewable_attack_message: boolean
       is_viewable_fanatic_message: boolean
+      is_viewable_private_system_message: boolean
       is_viewable_psychic_message: boolean
       is_available_skill_request: boolean
     }
@@ -2020,7 +2029,9 @@ export interface operations {
   }
   findLatest: {
     parameters: {
-      query?: never
+      query: {
+        form: components['schemas']['VillageLatestForm']
+      }
       header?: never
       path: {
         villageId: number
